fixed white space on top and left

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*{
+  box-sizing: border-box;
+}
+head,body{
+  padding: 0;
+  margin: 0;
+}
 h1{
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +16,8 @@ h1{
   width: 100vw;
   height: 100vh;
   margin: 0;
-  box-sizing: border-box;
+  padding: 20px;
+  
 
 }
 .top{
@@ -27,6 +35,11 @@ h1{
   border-radius: 10px;
   border: none;
 
+}
+.button:hover{
+  background-color: white;
+  color: black;
+  cursor: pointer;
 }
 html, body {
   margin: 0;
